--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -29,6 +29,7 @@
     background-repeat: no-repeat;
     width: 30px;
     height: 30px;
+    cursor: pointer;
   }
 
   &--search {
@@ -39,6 +40,7 @@
     background-repeat: no-repeat;
     width: 25px;
     height: 25px;
+    cursor: pointer;
   }
 
   &--input {
@@ -57,5 +59,6 @@
     background-repeat: no-repeat;
     width: 50px;
     height: 50px;
+    cursor: pointer;
   }
 }
