--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -8,11 +8,12 @@
   margin: 17px;
   align-items: center;
   z-index: 1;
+  box-shadow: 1px 1px rgba($color: #888888, $alpha: 0.4);
 
   &--image {
     background-position: center;
-    background-color: aliceblue;
     background-size: 100%;
+    background-color: white;
     width: 100%;
     height: 100%;
     max-height: 200px;
@@ -21,6 +22,7 @@
   &--name {
     color: white;
     font-size: 20px;
+    text-transform: uppercase;
   }
 
   &--price {
@@ -32,6 +34,7 @@
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
+    cursor: pointer;
     width: 20px;
     height: 20px;
   }
@@ -45,7 +48,10 @@
       background: url("../../media/svg/minus.svg");
     }
 
-    &--product--button--counter {
+    &--counter {
+      text-align: center;
+      color: white;
+      font-size: 20px;
     }
 
     &--plus {
