--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,13 @@ html {
   -moz-box-sizing: inherit;
   box-sizing: inherit;
 }
+
+.shadow {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+  visibility: hidden;
+  transition: 0.5s;
+  z-index: 1000;
+}
