--- a/src/scss/components/modal.css
+++ b/src/scss/components/modal.css
@@ -1,7 +1,16 @@
 .modal {
-  position: fixed;
   background-color: white;
-  width: 700px;
-  height: 250px;
+  visibility: hidden;
+  opacity: 0;
+  text-align: center;
+  position: fixed;
+  border-radius: 3px;
+  width: 500px;
+  height: 200px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  left: calc(50% - 250px);
+  top: calc(50% - 100px);
+  z-index: 10;
 }
 /*# sourceMappingURL=modal.css.map */
