--- a/src/scss/components/modal.scss
+++ b/src/scss/components/modal.scss
@@ -10,5 +10,10 @@
   transition: 0.5s;
   left: calc(50% - 250px);
   top: calc(50% - 100px);
-  z-index: 10;
+  z-index: 1001;
+
+  &--visible {
+    opacity: 1;
+    visibility: visible;
+  }
 }
