--- a/src/App.css
+++ b/src/App.css
@@ -27,9 +27,15 @@ html {
 .shadow {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0;
   visibility: hidden;
   transition: 0.5s;
   z-index: 1000;
+}
+
+.on {
+  opacity: 1;
+  visibility: visible;
 }
