--- a/src/scss/components/products.css
+++ b/src/scss/components/products.css
@@ -4,7 +4,7 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 100px;
+  padding-top: 100px;
   max-width: 1080px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
