--- a/src/scss/components/products.scss
+++ b/src/scss/components/products.scss
@@ -2,7 +2,7 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 100px;
+  padding-top: 100px;
   max-width: 1080px;
   flex-wrap: wrap;
   justify-content: center;
