--- a/src/scss/components/modal.css
+++ b/src/scss/components/modal.css
@@ -7,6 +7,7 @@
   border-radius: 3px;
   height: 500px;
   width: 700px;
+  overflow: scroll;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   left: calc(50% - 350px);
@@ -15,7 +16,12 @@
 }
 
 .modal table {
-  display: -webkit-inline-box;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.modal tr:hover {
+  background-color: #f5f5f5;
 }
 
 .modal--visible {
@@ -26,11 +32,6 @@
 .modal--contents {
   display: table;
   text-align: center;
-}
-
-.modal--contents th,
-.modal--contents td {
-  padding: 50px;
 }
 
 .modal--contents--img {
