--- a/src/scss/components/modal.scss
+++ b/src/scss/components/modal.scss
@@ -7,13 +7,19 @@
   border-radius: 3px;
   height: 500px;
   width: 700px;
+  overflow: scroll;
   transition: 0.5s;
   left: calc(50% - 350px);
   top: calc(50% - 250px);
   z-index: 1001;
 
   table {
-    display: -webkit-inline-box;
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  tr:hover {
+    background-color: #f5f5f5;
   }
 
   &--visible {
@@ -24,11 +30,6 @@
   &--contents {
     display: table;
     text-align: center;
-
-    th,
-    td {
-      padding: 50px;
-    }
 
     &--img {
       width: 50px;
