--- a/src/scss/components/modal.css
+++ b/src/scss/components/modal.css
@@ -29,6 +29,16 @@
   visibility: visible;
 }
 
+.modal--remove {
+  background: url("../../media/svg/delete.svg");
+  background-position: center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+}
+
 .modal--contents {
   display: table;
   text-align: center;
