--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ html {
   background-color: rgba(0, 0, 0, 0.7);
   opacity: 0;
   visibility: hidden;
+  margin-top: -129px;
   transition: 0.5s;
   z-index: 1000;
 }
