--- a/src/scss/components/footer.css
+++ b/src/scss/components/footer.css
@@ -1,6 +1,6 @@
 .footer {
   background-color: #2d2d2d;
   width: 100%;
-  height: 200px;
+  height: 40vh;
 }
 /*# sourceMappingURL=footer.css.map */
