--- a/src/scss/components/header.css
+++ b/src/scss/components/header.css
@@ -1,10 +1,34 @@
-.navigation-bar {
-  position: fixed;
+html,
+body {
+  line-height: 1 !important;
+}
+
+ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  top: 0;
-  background-color: black;
+  list-style: none;
+}
+
+li {
+  font-size: 16px;
+  color: #7f7f7f;
+  margin-left: 15px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+li:hover {
+  color: #656363;
+}
+
+.navigation-bar {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  top: 0px;
+  background-color: #fcfcfc;
   width: 100%;
   z-index: 999;
 }
@@ -14,29 +38,21 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  max-width: 1080px;
+  max-width: 980px;
+  padding: 42px;
   margin-left: auto;
   margin-right: auto;
-  -ms-flex-pack: justify;
-  -webkit-box-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: baseline;
+      -ms-flex-pack: baseline;
+          justify-content: baseline;
 }
 
 .navigation-bar--text {
-  color: white;
-}
-
-.navigation-bar--menu {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  background: url("../../media/svg/hamburguer.svg");
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
+  color: #656363;
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .navigation-bar--search {
@@ -47,13 +63,19 @@
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
+  margin-left: 5px;
   width: 25px;
   height: 25px;
   cursor: pointer;
 }
 
+.navigation-bar--menu {
+  margin-left: 15px;
+}
+
 .navigation-bar--input {
   height: 30px;
+  margin-left: auto;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -64,12 +86,13 @@
 
 .navigation-bar--cart {
   display: inline-block;
+  margin-left: auto;
   background: url("../../media/svg/shopping-cart.svg");
   background-position: center;
   background-size: 100%;
   background-repeat: no-repeat;
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 45px;
   cursor: pointer;
 }
 /*# sourceMappingURL=header.css.map */
