--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,34 +1,50 @@
-.navigation-bar {
-  position: fixed;
+html,
+body {
+  line-height: 1 !important;
+}
+
+ul {
   display: flex;
-  top: 0;
-  background-color: black;
+  list-style: none;
+}
+
+li {
+  font-size: 16px;
+  color: #7f7f7f;
+  margin-left: 15px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+li:hover {
+  color: #656363;
+}
+
+.navigation-bar {
+  position: absolute;
+  display: flex;
+  top: 0px;
+  background-color: #fcfcfc;
   width: 100%;
   z-index: 999;
 
   &--contents {
     display: flex;
     width: 100%;
-    max-width: 1080px;
+    max-width: 980px;
+    padding: 42px;
     margin-left: auto;
     margin-right: auto;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+    justify-content: baseline;
   }
 
   &--text {
-    color: white;
-  }
+    color: #656363;
+    font-family: Arial, Helvetica, sans-serif;
 
-  &--menu {
-    align-self: center;
-    background: url("../../media/svg/hamburguer.svg");
-    background-size: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: bold;
   }
 
   &--search {
@@ -37,13 +53,19 @@
     background-size: 100%;
     background-position: center;
     background-repeat: no-repeat;
+    margin-left: 5px;
     width: 25px;
     height: 25px;
     cursor: pointer;
   }
 
+  &--menu {
+    margin-left: 15px;
+  }
+
   &--input {
     height: 30px;
+    margin-left: auto;
     align-self: center;
     border: 2px solid black;
     border-radius: 15px;
@@ -52,12 +74,13 @@
 
   &--cart {
     display: inline-block;
+    margin-left: auto;
     background: url("../../media/svg/shopping-cart.svg");
     background-position: center;
     background-size: 100%;
     background-repeat: no-repeat;
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 45px;
     cursor: pointer;
   }
 }
