--- a/src/scss/components/modal.css
+++ b/src/scss/components/modal.css
@@ -1,3 +1,10 @@
+::-webkit-scrollbar {
+  width: 0px;
+  /* remove scrollbar space */
+  background: transparent;
+  /* optional: just make scrollbar invisible */
+}
+
 .modal {
   background-color: white;
   visibility: hidden;
@@ -15,7 +22,17 @@
   z-index: 1001;
 }
 
+.modal--header {
+  background-color: black;
+  width: 100%;
+  height: 20px;
+  position: relative;
+  top: 0;
+}
+
 .modal table {
+  margin-left: auto;
+  margin-right: auto;
   border-collapse: collapse;
   width: 100%;
 }
@@ -33,6 +50,7 @@
   background: url("../../media/svg/delete.svg");
   background-position: center;
   background-size: 100%;
+  padding: 20px;
   background-repeat: no-repeat;
   cursor: pointer;
   height: 20px;
@@ -40,12 +58,17 @@
 }
 
 .modal--contents {
+  margin-top: 20px;
   display: table;
   text-align: center;
 }
 
 .modal--contents--img {
-  width: 50px;
+  width: 40px;
   height: 50px;
+}
+
+.right {
+  float: right;
 }
 /*# sourceMappingURL=modal.css.map */
