--- a/src/scss/components/modal.scss
+++ b/src/scss/components/modal.scss
@@ -1,3 +1,8 @@
+::-webkit-scrollbar {
+  width: 0px; /* remove scrollbar space */
+  background: transparent; /* optional: just make scrollbar invisible */
+}
+
 .modal {
   background-color: white;
   visibility: hidden;
@@ -13,7 +18,17 @@
   top: calc(50% - 250px);
   z-index: 1001;
 
+  &--header {
+    background-color: black;
+    width: 100%;
+    height: 20px;
+    position: relative;
+    top: 0;
+  }
+
   table {
+    margin-left: auto;
+    margin-right: auto;
     border-collapse: collapse;
     width: 100%;
   }
@@ -31,6 +46,7 @@
     background: url("../../media/svg/delete.svg");
     background-position: center;
     background-size: 100%;
+    padding: 20px;
     background-repeat: no-repeat;
     cursor: pointer;
     height: 20px;
@@ -38,12 +54,17 @@
   }
 
   &--contents {
+    margin-top: 20px;
     display: table;
     text-align: center;
 
     &--img {
-      width: 50px;
+      width: 40px;
       height: 50px;
     }
   }
+}
+
+.right {
+  float: right;
 }
