--- a/src/scss/components/product.css
+++ b/src/scss/components/product.css
@@ -6,36 +6,35 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 20%;
-  height: 300px;
-  background-color: darkred;
+  height: 359px;
   margin: 17px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
   z-index: 1;
-  -webkit-box-shadow: 1px 1px rgba(136, 136, 136, 0.4);
-          box-shadow: 1px 1px rgba(136, 136, 136, 0.4);
+  border: 1px solid #f7f6f6;
+  padding: 25px;
+  cursor: pointer;
 }
 
 .product--image {
-  background-position: center;
-  background-size: 100%;
-  background-color: white;
-  width: 100%;
-  height: 100%;
-  max-height: 200px;
+  background-position: center center;
+  max-height: 259px;
 }
 
 .product--name {
-  color: white;
-  font-size: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #717171;
+  font-size: 16px;
+  margin-top: 60px;
   text-transform: uppercase;
 }
 
 .product--price {
-  color: white;
-  font-size: 20px;
+  color: #717171;
+  font-size: 18px;
 }
 
 .product--btn {
@@ -67,5 +66,9 @@
 
 .product--button--plus {
   background: url("../../media/svg/add.svg");
+}
+
+.product:hover {
+  background-color: antiquewhite;
 }
 /*# sourceMappingURL=product.css.map */
