--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -1,32 +1,34 @@
 .product {
   display: flex;
   flex-direction: column;
-  width: 20%;
-  height: 300px;
-  background-color: darkred;
+  height: 359px;
   margin: 17px;
   align-items: center;
+  transition: 0.2s;
   z-index: 1;
-  box-shadow: 1px 1px rgba($color: #888888, $alpha: 0.4);
+
+  border: 1px solid #f7f6f6;
+  padding: 25px;
+  cursor: pointer;
 
   &--image {
-    background-position: center;
-    background-size: 100%;
-    background-color: white;
-    width: 100%;
-    height: 100%;
-    max-height: 200px;
+    background-position: center center;
+    max-height: 259px;
   }
 
   &--name {
-    color: white;
-    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    color: #717171;
+    font-size: 16px;
+    margin-top: 60px;
     text-transform: uppercase;
   }
 
   &--price {
-    color: white;
-    font-size: 20px;
+    color: #717171;
+
+    font-size: 18px;
   }
 
   &--btn {
@@ -57,4 +59,8 @@
       background: url("../../media/svg/add.svg");
     }
   }
+}
+
+.product:hover {
+  background-color: antiquewhite;
 }
