--- a/src/scss/components/products.css
+++ b/src/scss/components/products.css
@@ -1,11 +1,19 @@
-.products-container {
+.products--title {
+  padding: 55px;
+  font-size: 20px;
+  color: #656363;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.products--container {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: [line1] 33.33% [line2] 33.33% [line3] 33.33%;
       grid-template-columns: [line1] 33.33% [line2] 33.33% [line3] 33.33%;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 100px;
   max-width: 980px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
