--- a/src/scss/components/products.scss
+++ b/src/scss/components/products.scss
@@ -1,10 +1,20 @@
-.products-container {
-  display: grid;
-  grid-template-columns: [line1]33.33% [line2]33.33% [line3]33.33%;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 100px;
-  max-width: 980px;
-  flex-wrap: wrap;
-  justify-content: center;
+.products {
+  &--title {
+    padding: 55px;
+    font-size: 20px;
+    color: #656363;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+  }
+
+  &--container {
+    display: grid;
+    grid-template-columns: [line1]33.33% [line2]33.33% [line3]33.33%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 980px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
