--- a/src/scss/components/product.css
+++ b/src/scss/components/product.css
@@ -2,12 +2,12 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  flex-direction: column;
   height: 359px;
-  margin: 17px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -15,7 +15,6 @@
   transition: 0.2s;
   z-index: 1;
   border: 1px solid #f7f6f6;
-  padding: 25px;
   cursor: pointer;
 }
 
@@ -41,7 +40,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #717171;
   font-size: 16px;
-  margin-top: 60px;
+  margin-top: 50px;
   text-transform: uppercase;
 }
 
