--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -1,13 +1,12 @@
 .product {
   display: flex;
+  flex-direction: row;
   flex-direction: column;
   height: 359px;
-  margin: 17px;
   align-items: center;
   transition: 0.2s;
   z-index: 1;
   border: 1px solid #f7f6f6;
-  padding: 25px;
   cursor: pointer;
 
   &--promotion {
@@ -33,7 +32,7 @@
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     color: #717171;
     font-size: 16px;
-    margin-top: 60px;
+    margin-top: 50px;
     text-transform: uppercase;
   }
 
