--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -15,10 +15,10 @@
     color: #fff;
     background-color: #f54d56;
     font-size: 16px;
-    display: none;
+    opacity: 0;
 
     &--on {
-      display: block;
+      opacity: 1;
     }
   }
 
