--- a/src/scss/components/description.css
+++ b/src/scss/components/description.css
@@ -5,4 +5,14 @@
 .description--text {
   color: #717171;
 }
+
+.button {
+  float: right;
+  text-align: center;
+  width: 150px;
+  padding: 20px;
+  color: white;
+  background-color: #f54d56;
+  cursor: pointer;
+}
 /*# sourceMappingURL=description.css.map */
