--- a/src/scss/components/description.scss
+++ b/src/scss/components/description.scss
@@ -5,3 +5,13 @@
     color: #717171;
   }
 }
+
+.button {
+  float: right;
+  text-align: center;
+  width: 150px;
+  padding: 20px;
+  color: white;
+  background-color: #f54d56;
+  cursor: pointer;
+}
