--- a/src/scss/components/item.css
+++ b/src/scss/components/item.css
@@ -23,4 +23,18 @@
   grid-column: content;
   margin-top: 130px;
 }
+
+.button {
+  display: block;
+  margin: 10px;
+  margin-top: -65px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 150px;
+  padding: 20px;
+  color: white;
+  background-color: #f54d56;
+  cursor: pointer;
+}
 /*# sourceMappingURL=item.css.map */
