--- a/src/scss/components/item.scss
+++ b/src/scss/components/item.scss
@@ -19,3 +19,17 @@
     margin-top: 130px;
   }
 }
+
+.button {
+  display: block;
+  margin: 10px;
+  margin-top: -65px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 150px;
+  padding: 20px;
+  color: white;
+  background-color: #f54d56;
+  cursor: pointer;
+}
