--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -1,5 +1,14 @@
-.cart {
+.container {
   margin-top: 129px;
+}
+
+.total {
+  font-size: 30px;
+  margin-left: 27px;
+  font-weight: bold;
+}
+
+.cart {
   display: grid;
   grid-template-columns: [border1]27px [middle]auto [border2]27px;
 
