--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -18,3 +18,16 @@
     grid-template-columns: [line1]33% [line2]33% [line3]33%;
   }
 }
+
+.delete {
+  display: block;
+  margin: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 150px;
+  padding: 20px;
+  color: white;
+  background-color: #f54d56;
+  cursor: pointer;
+}
