--- a/src/scss/components/footer.css
+++ b/src/scss/components/footer.css
@@ -1,6 +1,10 @@
 .footer {
+  position: static;
+  height: 200px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
   background-color: #2d2d2d;
-  width: 100%;
-  height: 40vh;
 }
 /*# sourceMappingURL=footer.css.map */
