--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -21,11 +21,9 @@
 
 .delete {
   display: block;
-  margin: 10px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0px;
+  margin-bottom: 10px;
   text-align: center;
-  width: 150px;
   padding: 20px;
   color: white;
   background-color: #f54d56;
@@ -35,12 +33,20 @@
 .grid-container {
   display: grid;
   grid-template-columns: [col1]30% [col2]70%;
+  justify-content: center;
 
   &--first {
     grid-column: col1;
   }
 
   &--last {
+    display: grid;
+
     grid-column: col2;
+
+    .description {
+      align-items: center;
+      align-self: center;
+    }
   }
 }
