--- a/src/scss/components/header.css
+++ b/src/scss/components/header.css
@@ -50,38 +50,17 @@ li:hover {
 .navigation-bar--text {
   color: #656363;
   font-family: Arial, Helvetica, sans-serif;
+  margin-top: auto;
+  margin-bottom: auto;
   text-transform: uppercase;
   font-size: 20px;
   font-weight: bold;
 }
 
-.navigation-bar--search {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  background: url("../../media/svg/search.svg");
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  margin-left: 5px;
-  width: 25px;
-  height: 25px;
-  cursor: pointer;
-}
-
 .navigation-bar--menu {
   margin-left: 15px;
-}
-
-.navigation-bar--input {
-  height: 30px;
-  margin-left: auto;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  border: 2px solid black;
-  border-radius: 15px;
-  width: 300px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .navigation-bar--cart {
@@ -91,8 +70,15 @@ li:hover {
   background-position: center;
   background-size: 100%;
   background-repeat: no-repeat;
-  width: 70px;
+  width: 45px;
   height: 45px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   cursor: pointer;
+}
+
+.navigation-bar--cart:hover {
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
 }
 /*# sourceMappingURL=header.css.map */
