--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -41,35 +41,17 @@ li:hover {
   &--text {
     color: #656363;
     font-family: Arial, Helvetica, sans-serif;
-
+    margin-top: auto;
+    margin-bottom: auto;
     text-transform: uppercase;
     font-size: 20px;
     font-weight: bold;
   }
 
-  &--search {
-    align-self: center;
-    background: url("../../media/svg/search.svg");
-    background-size: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    margin-left: 5px;
-    width: 25px;
-    height: 25px;
-    cursor: pointer;
-  }
-
   &--menu {
     margin-left: 15px;
-  }
-
-  &--input {
-    height: 30px;
-    margin-left: auto;
-    align-self: center;
-    border: 2px solid black;
-    border-radius: 15px;
-    width: 300px;
+    margin-top: auto;
+    margin-bottom: auto;
   }
 
   &--cart {
@@ -79,8 +61,13 @@ li:hover {
     background-position: center;
     background-size: 100%;
     background-repeat: no-repeat;
-    width: 70px;
+    width: 45px;
     height: 45px;
+    transition: 0.5s;
     cursor: pointer;
+
+    &:hover {
+      transform: scale(1.5);
+    }
   }
 }
