--- a/src/scss/components/header.css
+++ b/src/scss/components/header.css
@@ -10,15 +10,17 @@ ul {
   list-style: none;
 }
 
-li {
+.link {
   font-size: 16px;
   color: #7f7f7f;
   margin-left: 15px;
   margin-right: 15px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   cursor: pointer;
 }
 
-li:hover {
+.link:hover {
   color: #656363;
 }
 
