--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -8,15 +8,16 @@ ul {
   list-style: none;
 }
 
-li {
+.link {
   font-size: 16px;
   color: #7f7f7f;
   margin-left: 15px;
   margin-right: 15px;
+  transition: 0.4s;
   cursor: pointer;
 }
 
-li:hover {
+.link:hover {
   color: #656363;
 }
 
