--- a/src/components/pages/home/scss/product.scss
+++ b/src/components/pages/home/scss/product.scss
@@ -57,7 +57,7 @@
     margin-right: auto;
 
     &--minus {
-      background: url("../../media/svg/minus.svg");
+      background: url("../../../../media/svg/minus.svg");
     }
 
     &--counter {
@@ -67,7 +67,7 @@
     }
 
     &--plus {
-      background: url("../../media/svg/add.svg");
+      background: url("../../../../media/svg/add.svg");
     }
   }
 }
