--- a/src/components/pages/layout/scss/header.scss
+++ b/src/components/pages/layout/scss/header.scss
@@ -58,7 +58,7 @@ ul {
   &--cart {
     display: inline-block;
     margin-left: auto;
-    background: url("../../media/svg/shopping-cart.svg");
+    background: url("../../../../media/svg/shopping-cart.svg");
     background-position: center;
     background-size: 100%;
     background-repeat: no-repeat;
