--- a/src/components/pages/home/scss/banner.css
+++ b/src/components/pages/home/scss/banner.css
@@ -1,7 +1,18 @@
 .banner {
+  background-image: url("../../../../media/img/banner.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
   width: 100%;
-  height: 430px;
-  background-color: #edecec;
+  min-height: 720px;
+  max-height: 1400px;
   margin-top: 129px;
+  display: none;
+}
+
+@media only screen and (min-width: 720px) {
+  .banner {
+    display: block;
+  }
 }
 /*# sourceMappingURL=banner.css.map */
