--- a/src/components/pages/cart/cart.scss
+++ b/src/components/pages/cart/cart.scss
@@ -53,6 +53,11 @@
     .description {
       align-items: center;
       align-self: center;
+      display: none;
+
+      @media only screen and (min-width: 720px) {
+        display: block;
+      }
     }
   }
 }
