--- a/src/components/pages/home/scss/products.scss
+++ b/src/components/pages/home/scss/products.scss
@@ -15,6 +15,8 @@
     grid-template-columns: [line1]auto;
     margin-left: auto;
     margin-right: auto;
+    min-height: 50vh;
+
     max-width: 980px;
     flex-wrap: wrap;
     justify-content: center;
