--- a/src/components/pages/home/scss/products.css
+++ b/src/components/pages/home/scss/products.css
@@ -18,6 +18,7 @@
       grid-template-columns: [line1] auto;
   margin-left: auto;
   margin-right: auto;
+  min-height: 50vh;
   max-width: 980px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
