--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   font-size: 15px;
   line-height: 1.5;
   background-color: #f5f5f5;
-  min-height: 100%;
+  height: 100%;
 }
 
 html {
@@ -44,4 +44,9 @@ html {
 .on {
   opacity: 1;
   visibility: visible;
+}
+
+.pushDown {
+  padding: 10px;
+  padding-bottom: 200px;
 }
