--- a/src/components/pages/layout/scss/footer.scss
+++ b/src/components/pages/layout/scss/footer.scss
@@ -1,9 +1,10 @@
 .footer {
   position: relative;
-  height: 200px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
+  height: 60px;
+  margin-top: auto;
+  bottom: 0;
+  left: 0;
+  right: 0;
   margin-bottom: 0px;
   background-color: #2d2d2d;
 }
