--- a/src/components/pages/item/scss/item.css
+++ b/src/components/pages/item/scss/item.css
@@ -18,7 +18,7 @@
 .item .product {
   margin-right: auto;
   margin-left: auto;
-  width: 325px;
+  min-width: 325px;
 }
 
 .item--container {
@@ -29,10 +29,13 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  padding: 50px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-right: auto;
   margin-left: auto;
   grid-column: content;
-  margin-top: 130px;
+  margin-top: 225px;
 }
 
 .button {
@@ -41,11 +44,13 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  max-height: 60px;
   width: 150px;
   padding: 20px;
-  color: white;
+  color: #fff;
   background-color: #f54d56;
   cursor: pointer;
+  margin-bottom: calc(100vh - 500px);
 }
 
 @media only screen and (min-width: 720px) {
