--- a/src/components/pages/item/scss/item.scss
+++ b/src/components/pages/item/scss/item.scss
@@ -15,7 +15,9 @@
   .product {
     margin-right: auto;
     margin-left: auto;
-    min-width: 325px;
+    @media only screen and (min-width: 720px) {
+      min-width: 325px;
+    }
   }
 
   &--container {
